--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    width: 100dvw;
+    height: 100vh;
+    margin: 0;
+    background-image: url("../src/assets/imagen/Fondo.png");
+}
