--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -30,7 +30,7 @@
                 <input type="checkbox">
                 Recordarme
             </label>
-            <a href="#" class="forgot-password">Has Olvidado tu contraseña?</a>
+            <a href="#" routerLink="/recuperar-pass" class="forgot-password">Has Olvidado tu contraseña?</a>
         </div>
 
         <!-- Boton Ingresar -->
